2018-06-16  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/wpg.c Fix oss-fuzz 7735 "graphicsmagick/coder_WPG_fuzzer:
	Use-of-uninitialized-value in ReadWPGImage".  (Credit to OSS-Fuzz)

2018-06-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadMNGImage): ENDL chunk must be at least one
	byte in size. Fixes oss-fuzz 8832
	"graphicsmagick/coder_MNG_fuzzer: Null-dereference READ in
	ReadMNGImage". (Credit to OSS-Fuzz)
	(ReadMNGImage): Length of DISC chunk must be evenly divisible by
	2.  Fixes oss-fuzz 8834 "graphicsmagick/coder_MNG_fuzzer:
	Heap-buffer-overflow in ReadMNGImage". (Credit to OSS-Fuzz)

2018-06-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mpc.c (ReadMPCImage): Detect end of file while reading
	image directory.  Similar to MIFF fixes for ImageMagick
	CVE-2017-18272.
	(RegisterMPCImage): Require seekable stream since MPC is strictly
	a file-based format and so GetBlobSize() is assured to work.
	Similar to MIFF behavior.  Claimed to be part of the resolution
	for ImageMagick CVE CVE-2017-11449. Suggested by Petr Gajdos via
	email on January 3, 2018.

2018-06-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Detect end of file while reading
	image directory. Fixes SourceForge issue 565 "ImageMagick
	CVE-2017-18272 applies to GraphicsMagick".  Thanks to Petr Gajdos
	for reporting this issue to us.

	* magick/import.c (ImportViewPixelArea): Use appropriate
	bits_per_sample validations for FloatQuantumSampleType. Fixes
	oss-fuzz 8780 "graphicsmagick/coder_PTIF_fuzzer:
	Use-of-uninitialized-value in HorizontalFilter". (Credit to
	OSS-Fuzz)

2018-06-09  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c More than 4GiB are not supported in MAT!

2018-06-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mat.c (ReadMATImage): Add casts to avoid arithmetic
	overflow when computing size and offsets.  Fixes oss-fuzz 8801
	"graphicsmagick/coder_MAT_fuzzer: Timeout in