@@ -1,3 +1,12 @@
+2018-06-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/tiff.c (ReadTIFFImage): Re-structure exception reporting
+	so that QuantumTransferMode() exceptions thrown for
+	PLANARCONFIG_SEPARATE images are handled immediately.  Fixes
+	oss-fuzz 8896 "graphicsmagick/coder_BIGTIFF_fuzzer:
+	Use-of-uninitialized-value in DisassociateAlphaRegion". (Credit to
+	OSS-Fuzz)
+
 2018-06-16  Fojtik Jaroslav  <JaFojtik@seznam.cz>
 
 	* coders/wpg.c Fix oss-fuzz 7735 "graphicsmagick/coder_WPG_fuzzer:
